# Problems-1-DS

./: README.md
Problem 1/: main.cpp
Problem 2/: p2-polynomial.cpp  testcases_problem2.txt
Problem 3/: CMakeLists.txt  Problem3.cpp  main.cpp
Problem 3/SortedLinkedList/: SortedLinkedList.cpp  SortedLinkedList.h
Problem 3/SortedLinkedList/Node/: Node.cpp  Node.h
Problem 4/: Problem_4.cpp  SortingSystem.cpp  SortingSystem.h  UI.cpp  UI.h  input.txt  main.cpp
Problem 5/: problem5.cpp  stat1.txt  stat2.txt
